added scroll animation

--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -1,45 +1,46 @@
-  <footer>
-    <div class="container">
-      <div class="footer__title">WE ARE WHO WE ARE</div>
-      <div class="footer__main">
-        <div class="footer__copyright">
-          <img class="footer__logo" src="../images/logo-footer.svg" alt="logo">
-          <div class="footer__copyright-text">© 2020 Home Box Office, Inc. All Rights Reserved
-            This website may contain mature content</div>
-        </div>
-        <nav class="footer__menu">
-          <ul class="footer__menu-list">
-            <li class="footer__menu-list-item">
-              <a class="footer__menu-list-link" href="#">ABOUT</a>
-            </li>
-            <li class="footer__menu-list-item">
-              <a class="footer__menu-list-link" href="#">CAST&CREW</a>
-            </li>
-            <li class="footer__menu-list-item">
-              <a class="footer__menu-list-link" href="#">EPISODES</a>
-            </li>
-            <li class="footer__menu-list-item">
-              <a class="footer__menu-list-link" href="#">PHOTO</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="socials">
-          <a class="socials-item" href="#">
-              <img src="../images/insta.svg" alt="instagram">
-          </a>
-          <a class="socials-item" href="#">
-              <img src="../images/youtube.svg" alt="youtube">
-          </a>
-          <a class="socials-item" href="#">
-              <img src="../images/facebook.svg" alt="facebook">
-          </a>
-          <a class="socials-item" href="#">
-              <img src="../images/twitter.svg" alt="twitter">
-          </a>
+    <footer>
+      <div class="container">
+        <div class="footer__title" data-aos="fade-up">WE ARE WHO WE ARE</div>
+        <div class="footer__main">
+          <div class="footer__copyright">
+            <img class="footer__logo" src="../images/logo-footer.svg" alt="logo">
+            <div class="footer__copyright-text">© 2020 Home Box Office, Inc. All Rights Reserved
+              This website may contain mature content</div>
+          </div>
+          <nav class="footer__menu">
+            <ul class="footer__menu-list">
+              <li class="footer__menu-list-item">
+                <a class="footer__menu-list-link" href="#">ABOUT</a>
+              </li>
+              <li class="footer__menu-list-item">
+                <a class="footer__menu-list-link" href="#">CAST&CREW</a>
+              </li>
+              <li class="footer__menu-list-item">
+                <a class="footer__menu-list-link" href="#">EPISODES</a>
+              </li>
+              <li class="footer__menu-list-item">
+                <a class="footer__menu-list-link" href="#">PHOTO</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="socials">
+            <a class="socials-item" href="#">
+                <img src="../images/insta.svg" alt="instagram">
+            </a>
+            <a class="socials-item" href="#">
+                <img src="../images/youtube.svg" alt="youtube">
+            </a>
+            <a class="socials-item" href="#">
+                <img src="../images/facebook.svg" alt="facebook">
+            </a>
+            <a class="socials-item" href="#">
+                <img src="../images/twitter.svg" alt="twitter">
+            </a>
+          </div>
         </div>
       </div>
-    </div>
-  </footer>
+    </footer>
+  </div>
 </div>
 <!-- <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script> -->
 <script src="js/main.min.js"></script>
