--- a/app/components/header.html
+++ b/app/components/header.html
@@ -6,70 +6,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>We Are Who We Are</title>
     <link rel="stylesheet" href="css/style.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
-<body>
-    <div class="wrapper">
-        <div class="header">
-            <div class="container">
-                <div class="header__top">
-                    <img class="header__logo" src="../images/logo.svg" alt="logo">
-                    <div class="header__menu">
-                        <div class="header__menu-burger">
-                            <span></span>
-                        </div>
-                        <nav class="header__menu-body menu">
-                            <ul class="menu__list">
-                                <li class="menu__list-item">
-                                    <a data-goto=".--about-section" class="menu__list-link" href="#">ABOUT</a>
-                                </li>
-                                <li class="menu__list-item">
-                                    <a data-goto=".--cast-crew-section" class="menu__list-link" href="#">CAST&CREW</a>
-                                </li>
-                                <li class="menu__list-item">
-                                    <a data-goto=".--episodes-section" class="menu__list-link" href="#">EPISODES</a>
-                                </li>
-                                <li class="menu__list-item">
-                                    <a data-goto=".--photos-section" class="menu__list-link" href="#">PHOTO</a>
-                                </li>
-                            </ul>
-                        </nav>                      
-                    </div>
-                    <div class="socials">
-                        <a class="socials-item" href="#">
-                            <img src="../images/insta.svg" alt="instagram">
-                        </a>
-                        <a class="socials-item" href="#">
-                            <img src="../images/youtube.svg" alt="youtube">
-                        </a>
-                        <a class="socials-item" href="#">
-                            <img src="../images/facebook.svg" alt="facebook">
-                        </a>
-                        <a class="socials-item" href="#">
-                            <img src="../images/twitter.svg" alt="twitter">
-                        </a>
-                    </div>
-                </div>
-      
-                <div class="header__main">
-                    <div class="header__left">
-                        <div class="header__title">WE ARE</div>
-                        <div class="header__info">
-                            <div class="header__info-author">Luca Guadagnino</div>
-                            <div class="header__info-text">AVAILABLE NOW</div>
-                            <button class="header__info-btn" type="button"></button>
-                        </div>
-                    </div>
-                    <div class="header__right">
-                        <div class="header__right-title">
-                            <div class="header__right-title-text">
-                                <div>1 SEASON   /   8 EPISODES</div>
-                                <div>TV-MA</div>
+<body data-aos-easing="ease" data-aos-duration="1000" data-aos-delay="50">
+    <div class="wrapper" id="smooth-wrapper">
+        <div class="content" id="smooth-content">
+            <div class="header">
+                <div class="container">
+                    <div class="header__top">
+                        <img class="header__logo" src="../images/logo.svg" alt="logo">
+                        <div class="header__menu">
+                            <div class="header__menu-burger">
+                                <span></span>
                             </div>
-                            <div class="header__title">who</div>
+                            <nav class="header__menu-body menu">
+                                <ul class="menu__list">
+                                    <li class="menu__list-item">
+                                        <a data-goto=".--about-section" class="menu__list-link" href="#">ABOUT</a>
+                                    </li>
+                                    <li class="menu__list-item">
+                                        <a data-goto=".--cast-crew-section" class="menu__list-link" href="#">CAST&CREW</a>
+                                    </li>
+                                    <li class="menu__list-item">
+                                        <a data-goto=".--episodes-section" class="menu__list-link" href="#">EPISODES</a>
+                                    </li>
+                                    <li class="menu__list-item">
+                                        <a data-goto=".--photos-section" class="menu__list-link" href="#">PHOTO</a>
+                                    </li>
+                                </ul>
+                            </nav>                      
                         </div>
-                        <div class="header__title --we-are">we are</div>
+                        <div class="socials">
+                            <a class="socials-item" href="#">
+                                <img src="../images/insta.svg" alt="instagram">
+                            </a>
+                            <a class="socials-item" href="#">
+                                <img src="../images/youtube.svg" alt="youtube">
+                            </a>
+                            <a class="socials-item" href="#">
+                                <img src="../images/facebook.svg" alt="facebook">
+                            </a>
+                            <a class="socials-item" href="#">
+                                <img src="../images/twitter.svg" alt="twitter">
+                            </a>
+                        </div>
+                    </div>
+        
+                    <div class="header__main">
+                        <div class="header__left">
+                            <div class="header__title" data-aos="fade-right" data-aos-delay="500">WE ARE</div>
+                            <div class="header__info">
+                                <div class="header__info-author">Luca Guadagnino</div>
+                                <div class="header__info-text">AVAILABLE NOW</div>
+                                <button class="header__info-btn" type="button"></button>
+                            </div>
+                        </div>
+                        <div class="header__right">
+                            <div class="header__right-title">
+                                <div class="header__right-title-text" data-aos="fade-left" data-aos-delay="500">
+                                    <div>1 SEASON   /   8 EPISODES</div>
+                                    <div>TV-MA</div>
+                                </div>
+                                <div class="header__title" data-aos="fade-left" data-aos-delay="500">who</div>
+                            </div>
+                            <div class="header__title --we-are" data-aos="fade-left" data-aos-delay="500">we are</div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
